# TradingAgents-MultiMarket

./: .env.example  README.md  docker-compose.yml  pyproject.toml
cli/: main.py  reporting.py  runner_bridge.py  utils.py
docs/release-notes/: 2026-04-09-market-extensions-and-crypto.md
tests/: test_akshare_provider.py  test_analysis_request.py  test_analysis_runner.py  test_ashare_fundamentals.py  test_ashare_indicators.py  test_ashare_interface.py  test_ashare_market_detection.py  test_ashare_news.py  test_ashare_providers.py  test_ashare_shared_dispatcher.py  test_ashare_unsupported.py  test_cli_noninteractive.py  test_cli_runner_bridge.py  test_cli_stream_messages.py  test_crypto_binance_provider.py  test_crypto_coingecko_provider.py  test_crypto_indicators.py  test_crypto_interface_routing.py  test_crypto_market_detection.py  test_crypto_normalization.py  test_data_cache_config.py  test_index_fundamentals_analyst.py  test_market_extension_dispatch.py  test_market_specific_instruction.py  test_model_validation.py  test_news_analyst_context.py  test_provider_options.py  test_telegram_presentation.py  test_telegram_runtime.py  test_telegram_service.py  test_telegram_store.py  test_ticker_symbol_handling.py
tradingagents/: default_config.py
tradingagents/app/: __init__.py  analysis_request.py  analysis_runner.py  options.py  reporting.py
tradingagents/dataflows/: interface.py  stockstats_utils.py
tradingagents/graph/: checkpointer.py  trading_graph.py
tradingagents/llm_clients/: anthropic_client.py  factory.py  model_catalog.py
(+44 files in other folders)
